k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
  labels:
    app: events
spec:
  type: ClusterIP
  selector:
    app: events
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
